--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>cn.ymcd</groupId>
-	<artifactId>pine-ods</artifactId>
+	<groupId>cn.fuh</groupId>
+	<artifactId>fuhFrame</artifactId>
 	<version>1.0.4-SNAPSHOT</version>
 
-	<repositories>
-		<repository>
-			<id>nexus</id>
-			<name>Team Nexus Repository</name>
-			<url>http://192.168.200.161:8088/nexus/content/groups/public</url>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>nexus</id>
-			<name>Team Nexus Repository</name>
-			<url>http://192.168.200.161:8088/nexus/content/groups/public</url>
-		</pluginRepository>
-	</pluginRepositories>
 	<dependencies>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -67,8 +53,7 @@
 			<artifactId>druid</artifactId>
 			<version>1.0.28</version>
 		</dependency>
-		
-		
+
 	</dependencies>
 
 	<build>
@@ -100,16 +85,4 @@
 		</plugins>
 	</build>
 
-	<distributionManagement>
-		<repository>
-			<id>releases</id>
-			<name>Team Nexus Repository</name>
-			<url>http://192.168.200.161:8088/nexus/content/repositories/releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>Team Nexus Repository</name>
-			<url>http://192.168.200.161:8088/nexus/content/repositories/snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
 </project>
