--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>4.3.4.RELEASE</version>
 		</dependency>
-		
+
 		<!-- druid连接池 -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -64,24 +64,10 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+					<encoding>UTF8</encoding>
 				</configuration>
 			</plugin>
-
-			<plugin>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.1</version>
-				<configuration>
-					<attach>true</attach>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>compile</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+			
 		</plugins>
 	</build>
 
